# ppcd

./: .gitignore  Lab1.py  Lab5.py  Lab6_gr2.py  Lab7.rar  Lab8.py  Lab8.rar  README.md  achizitii.py  demo.mpi.py  demo_mpi.py  dictionary_broadcast.py  echipe_teren.py  l10.py  l6.py  l8.py  l8_attempt_2.py  lab1.py  lab2.py  lab3+4.py  lab3.1.py  lab3.py  lab5.hy  lab5.py  lab6.hy  lab6.py  lab6_gr2.py  lab6_xld.py  lab7.py  lab8.py  lastlab.py  test.hy  test.py
LAB1 TIRIS CATALIN IONEL/: l6_gr2(1).py  l6_gr2.py  lab1.py
LAB2 TIRIS CATALIN IONEL/: l6_gr1 (imbunatatire) 30.03.2023.py
LAB3 TIRIS CATALIN IONEL/: lab8.py
Lab_PPCD/: Lab1.py  Lab10.py  Lab8.py
PPCD LABs/lab1/: dictionary_broadcast.py
PPCD LABs/lab6/: lab6_gr2.py
PPCD_LABS/LAB6/: LAB6.py
lab1/: CMakeLists.txt  demo.py  demo_mpi.py  dictionary_broadcast.py  lab1.1.py  lab1.cpp  lab1.py  laborator2.py  run.sh  welcome_to_colaboratory.py
lab10/: CMakeLists.txt  achizitii.py  lab10.py  run.sh
lab11/: CMakeLists.txt  run.sh
lab2/: CMakeLists.txt  l6.py  lab2.cpp  lab6.py  run.sh
lab27apr/: main.py
lab3/: CMakeLists.txt  lab3.cpp  lab5.py  run.sh
lab4/: CMakeLists.txt  l8.py  lab4.cpp  run.sh
lab5/: CMakeLists.txt  achizitii.py  lab5.cpp  lab5.py  run.sh
lab6/: CMakeLists.txt  l6_gr1.py  l6_gr1_rework.py  l6_gr2.py  l6_xld.py  lab2.py  lab5.py  lab6.py  laborator5.py  run.sh
lab7/: CMakeLists.txt  run.sh
lab8/: CMakeLists.txt  echipe_teren.py  l8_attempt_2.py  lab8.cpp  lab8.py  run.sh
lab9/: CMakeLists.txt  run.sh
